[package]
name = "qeda"
description = "The tool for easy creating electronic component libraries"
version = "0.0.4"
authors = ["Shamil <shamil@shamil.ru>", "QEDA Authors"]
repository = "https://github.com/qeda/qeda-rs/"
license = "MIT"
edition = "2018"
readme = "README.md"
exclude = ["scripts/*", ".vscode/*"]

[lib]
name = "qeda"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
bitflags = "1.2"
clap = "2.33"
crypto-hash = "0.3"
hex = "0.4"
linked-hash-map = "0.5"
regex = "1.3"
reqwest = { version = "0.10", features = ["blocking"] }
svgdom = "0.18"
termcolor = "1.1"
thiserror = "1.0"
yaml-rust = "0.4"
