[package]
name = "qeda"
description = "Tool for creating electronic component libraries"
version = "0.0.4"
authors = ["Shamil <shamil@shamil.ru>", "QEDA Authors"]
repository = "https://github.com/qeda/qeda-rs/"
license = "MIT"
edition = "2018"
readme = "README.md"
exclude = ["scripts/*", ".vscode/*"]

[lib]
name = "qeda"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-recursion = "0.3"
bitflags = "1.2"
clap = "2.33"
crypto-hash = "0.3"
directories = "3.0"
futures = "0.3"
hex = "0.4"
linked-hash-map = "0.5"
regex = "1.4"
reqwest = "0.10"
serde_json = "1.0"
svgdom = "0.18"
termcolor = "1.1"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
yaml-rust = "0.4"
